# Kapibara-Control-Network-CPP

./: .gitignore  CMakeLists.txt  cartpole.ekan  fifo_in  input_values.csv  layer_0.layer  layer_1.layer  layer_2.layer  log.csv  main.cpp  main_1.cpp  run.sh  test_spline.csv  test_spline.ods
include/: AlphaBetaLayer.hpp  RResNet.hpp  activation.hpp  arbiter.hpp  attention.hpp  block.hpp  block_kac.hpp  block_multi_output.hpp  config.hpp  evo_kan_block.hpp  evo_kan_layer.hpp  evo_kan_spline.hpp  evo_kan_spline_node.hpp  evo_kan_stack.hpp  fastkac.hpp  kapibara_sublayer.hpp  layer.hpp  layer_counter.hpp  layer_hebbian.hpp  layer_kac.hpp  layer_multi_output.hpp  layer_proto.hpp  layer_proto_with_weights.hpp  layer_segmented.hpp  layer_sssm.hpp  layer_sssm_evo.hpp  layer_st.hpp  log.csv  misc.hpp  network.hpp  neuron.hpp  save_mutation_trainer.hpp  simd_vector.hpp  simd_vector_lite.hpp  static_kan_block.hpp  static_kan_spline.hpp  sub_block.hpp  tensor.hpp
layer_0/: block_0.kac  block_1.kac  block_10.kac  block_11.kac  block_12.kac  block_13.kac  block_14.kac  block_15.kac  block_16.kac  block_17.kac  block_18.kac  block_19.kac  block_2.kac  block_20.kac  block_21.kac  block_22.kac  block_23.kac  block_24.kac  block_25.kac  block_26.kac  block_27.kac  block_28.kac  block_29.kac  block_3.kac  block_30.kac  block_31.kac  block_32.kac  block_33.kac  block_34.kac  block_35.kac  block_36.kac  block_37.kac  block_38.kac  block_39.kac  block_4.kac  block_40.kac  block_41.kac  block_42.kac  block_43.kac  block_44.kac  (+24 more)
layer_1/: block_0.kac  block_1.kac  block_10.kac  block_11.kac  block_12.kac  block_13.kac  block_14.kac  block_15.kac  block_16.kac  block_17.kac  block_18.kac  block_19.kac  block_2.kac  block_20.kac  block_21.kac  block_22.kac  block_23.kac  block_24.kac  (+46 more)
(+25 files in other folders)
